overflow corrected

--- a/public/home.css
+++ b/public/home.css
@@ -16,6 +16,7 @@ body {
 body{
     color: white;
     background-color:rgb(22, 22, 22);
+    overflow-x: hidden;
  }
   
   /*Home Section CSS*/
@@ -1754,3 +1755,4 @@ section.special header.major h2:after {
 
 
 /* Footer CSS ends */
+
